--- a/configadmin/pom.xml
+++ b/configadmin/pom.xml
@@ -27,7 +27,7 @@
     </parent>
 
     <artifactId>org.apache.felix.configadmin</artifactId>
-    <version>1.8.9-SNAPSHOT</version>
+    <version>1.8.10</version>
     <packaging>bundle</packaging>
 
     <name>Apache Felix Configuration Admin Service</name>
@@ -36,9 +36,9 @@
     </description>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/felix/trunk/configadmin</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/configadmin</developerConnection>
-        <url>http://svn.apache.org/repos/asf/felix/configadmin</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/felix/releases/org.apache.felix.configadmin-1.8.10</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/releases/org.apache.felix.configadmin-1.8.10</developerConnection>
+        <url>scm:svn:https://svn.apache.org/repos/asf/felix/releases/org.apache.felix.configadmin-1.8.10</url>
     </scm>
 
     <!--
@@ -202,8 +202,8 @@
                             <!-- overwrite version from compendium bundle -->
                             org.osgi.service.log;version="1.3"
                         </DynamicImport-Package>
-                        <Provide-Capability>osgi.service;objectClass:List&lt;String>="org.osgi.service.cm.ConfigurationAdmin",
-                        osgi.service;objectClass:List&lt;String>="org.apache.felix.cm.PersistenceManager"</Provide-Capability>
+                        <Provide-Capability>osgi.service;objectClass:List&lt;String&gt;="org.osgi.service.cm.ConfigurationAdmin",
+                        osgi.service;objectClass:List&lt;String&gt;="org.apache.felix.cm.PersistenceManager"</Provide-Capability>
                         <Require-Capability>osgi.service;filter:="(objectClass=org.osgi.service.log.LogService)";effective:=active;resolution:=optional</Require-Capability>
                         <Embed-Dependency>
                             org.osgi.core;inline=org/osgi/util/tracker/ServiceTracker*|org/osgi/util/tracker/AbstractTracked.class
