--- a/scr-compat/pom.xml
+++ b/scr-compat/pom.xml
@@ -30,11 +30,11 @@
         Extensions of the DS Implementation to provide compatibility with API from older Apache Felix DS implementations.
     </description>
     <artifactId>org.apache.felix.scr.compat</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.5-SNAPSHOT</version>
     <scm>
-        <connection>scm:svn:https://svn.apache.org/repos/asf/felix/releases/org.apache.felix.scr.compat-1.0.4</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/releases/org.apache.felix.scr.compat-1.0.4</developerConnection>
-        <url>scm:svn:https://svn.apache.org/repos/asf/felix/releases/org.apache.felix.scr.compat-1.0.4</url>
+        <connection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/scr-compat</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/scr-compat</developerConnection>
+        <url>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/scr-compat</url>
     </scm>
     
     <dependencies>
