--- a/http/jetty/pom.xml
+++ b/http/jetty/pom.xml
@@ -39,7 +39,7 @@
     
     <properties>
         <felix.java.version>8</felix.java.version>
-    	<!-- jetty.version is moved to http-parent POM -->
+        <jetty.version>9.3.9.v20160517</jetty.version>
     </properties>
 
     <build>
