--- a/http/jetty/pom.xml
+++ b/http/jetty/pom.xml
@@ -191,7 +191,7 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.http.base</artifactId>
-            <version>3.0.9-SNAPSHOT</version>
+            <version>3.0.10</version>
         </dependency>
   <!-- Testing -->
         <dependency>
