--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -136,5 +136,11 @@
         <version>4.2</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.easymock</groupId>
+        <artifactId>easymock</artifactId>
+        <version>2.5.2</version>
+        <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
