--- a/eventadmin/impl/pom.xml
+++ b/eventadmin/impl/pom.xml
@@ -27,7 +27,7 @@
     <packaging>bundle</packaging>
     <name>Apache Felix EventAdmin</name>
     <description>
-	    This bundle provides an implementation of the OSGi R4 EventAdmin service.
+	    This bundle provides an implementation of the OSGi R6 EventAdmin service.
     </description>
     <version>1.4.7-SNAPSHOT</version>
     <artifactId>org.apache.felix.eventadmin</artifactId>
@@ -54,6 +54,12 @@
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
             <version>5.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.service.event</artifactId>
+            <version>1.3.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
