--- a/converter/serializer/pom.xml
+++ b/converter/serializer/pom.xml
@@ -26,15 +26,15 @@
         <relativePath>../pom/pom.xml</relativePath>
     </parent>
 
-    <name>Apache Felix Codec Services</name>
-    <artifactId>org.apache.felix.codec</artifactId>
+    <name>Apache Felix Serializer Services</name>
+    <artifactId>org.apache.felix.serializer</artifactId>
     <version>0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/felix/trunk/converter/codec</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/converter/codec</developerConnection>
-        <url>http://svn.apache.org/viewvc/felix/trunk/converter/codec/</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/felix/trunk/converter/serializer</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/converter/serializer</developerConnection>
+        <url>http://svn.apache.org/viewvc/felix/trunk/converter/serializer/</url>
     </scm>
 
     <properties>
@@ -65,9 +65,9 @@
                 </executions>
                 <configuration>
                     <instructions>
-                        <Bundle-Activator>org.apache.felix.codec.impl.Activator</Bundle-Activator>
-                        <Private-Package>org.apache.felix.codec.*,org.yaml.snakeyaml.*</Private-Package>
-                        <Export-Package>org.osgi.service.codec</Export-Package>
+                        <Bundle-Activator>org.apache.felix.serializer.impl.Activator</Bundle-Activator>
+                        <Private-Package>org.apache.felix.serializer.*,org.yaml.snakeyaml.*</Private-Package>
+                        <Export-Package>org.osgi.service.serializer</Export-Package>
                         <Import-Package>*</Import-Package>
                     </instructions>
                 </configuration>
