--- a/converter/converter/pom.xml
+++ b/converter/converter/pom.xml
@@ -47,7 +47,7 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.5.3</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <id>bundle</id>
@@ -67,8 +67,8 @@
                     <instructions>
                         <Bundle-Activator>org.apache.felix.converter.impl.Activator</Bundle-Activator>
                         <Private-Package>org.apache.felix.converter.*</Private-Package>
-                        <Export-Package>org.osgi.service.converter, org.osgi.service.converter.util</Export-Package>
-                        <Import-Package>*</Import-Package>
+                        <Export-Package>org.osgi.service.converter</Export-Package>
+                        <Import-Package>org.osgi.service.converter, *</Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
