--- a/configadmin/pom.xml
+++ b/configadmin/pom.xml
@@ -22,8 +22,8 @@
     <parent>
         <groupId>org.apache.felix</groupId>
         <artifactId>felix-parent</artifactId>
-        <version>3</version>
-        <relativePath>../pom/pom.xml</relativePath>
+        <version>4</version>
+        <relativePath/>
     </parent>
 
     <artifactId>org.apache.felix.configadmin</artifactId>
@@ -68,6 +68,7 @@
         in the IDE launcher. 
     -->
     <properties>
+        <felix.java.version>6</felix.java.version>
         <bundle.build.name>
             ${basedir}/target
         </bundle.build.name>
@@ -77,29 +78,25 @@
     </properties>
 
     <dependencies>
-    
-        <!--
-            Depend on latest version to make use of generics. Still we
-            make sure to only require Framework API 1.5 (OSGi Core R4.2)
-        -->
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.annotation</artifactId>
+            <version>6.0.1</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
-            <version>5.0.0</version>
+            <version>6.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.service.log</artifactId>
+            <version>1.3.0</version>
             <scope>provided</scope>
         </dependency>
         
-        <!--
-            Configuration Admin and other API from latest enterprise
-            which provides Config Admin 1.5 API
-        -->
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.enterprise</artifactId>
-            <version>5.0.0</version>
-            <scope>provided</scope>
-        </dependency>
-
         <!-- BND export annotations -->        
         <dependency>
             <groupId>biz.aQute</groupId>
@@ -112,7 +109,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.6</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -160,7 +156,7 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.framework</artifactId>
-            <version>4.0.3</version>
+            <version>5.4.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -170,7 +166,7 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.3.7</version>
+                <version>3.0.1</version>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
@@ -190,11 +186,10 @@
                             <!-- when the spec version changes, update the service property that includes the spec version in ConfigurationManager -->
                             org.apache.felix.cm;
                             org.apache.felix.cm.file,
-                            org.osgi.service.cm;provide:=true;version=1.5
+                            org.osgi.service.cm;provide:=true;version=1.6
                         </Export-Package>
                         <Import-Package>
-                            org.osgi.service.cm;version="[1.5,1.6)",
-                            org.osgi.framework;version="[1.4,2)",
+                            org.osgi.service.cm;version="[1.6,1.7)",
 							org.osgi.service.log;resolution:=optional;version="1.3",
                             *
                         </Import-Package>
@@ -202,9 +197,14 @@
                             <!-- overwrite version from compendium bundle -->
                             org.osgi.service.log;version="1.3"
                         </DynamicImport-Package>
-                        <Provide-Capability>osgi.service;objectClass:List&lt;String&gt;="org.osgi.service.cm.ConfigurationAdmin",
-                        osgi.service;objectClass:List&lt;String&gt;="org.apache.felix.cm.PersistenceManager"</Provide-Capability>
-                        <Require-Capability>osgi.service;filter:="(objectClass=org.osgi.service.log.LogService)";effective:=active;resolution:=optional</Require-Capability>
+                        <Provide-Capability><![CDATA[
+                            osgi.service;objectClass:List<String>="org.osgi.service.cm.ConfigurationAdmin";uses:="org.osgi.service.cm,org.apache.felix.cm",
+                            osgi.service;objectClass:List<String>="org.apache.felix.cm.PersistenceManager";uses:="org.osgi.service.cm,org.apache.felix.cm",
+                            osgi.implementation;osgi.implementation="osgi.cm";uses:="org.osgi.service.cm,org.apache.felix.cm";version:Version="1.6"
+                        ]]></Provide-Capability>
+                        <Require-Capability><![CDATA[
+                            osgi.service;filter:="(objectClass=org.osgi.service.log.LogService)";effective:=active;resolution:=optional
+                        ]]></Require-Capability>
                         <Embed-Dependency>
                             org.osgi.core;inline=org/osgi/util/tracker/ServiceTracker*|org/osgi/util/tracker/AbstractTracked.class
                         </Embed-Dependency>
