--- a/configurator/pom.xml
+++ b/configurator/pom.xml
@@ -106,7 +106,7 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.configadmin</artifactId>
-            <version>1.8.11-R7-SNAPSHOT</version>
+            <version>1.8.11-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -119,6 +119,7 @@
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.service.coordinator</artifactId>
             <version>1.0.2</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.yaml</groupId>
